tests/neg/i1568.scala
object Test {
  inline def foo(n: Int) = foo(n) // error: cyclic reference
}
